# renderer

./: .gitignore  Cargo.toml  build.rs  flake.nix  launch.sh  run.sh
src/: avatar.rs  context.rs  fig.rs  framebuffer.rs  main.rs  mesh.rs  shader.rs  term.rs  texture.rs  tracking.rs  utils.rs  vrm.rs
src/avatar/: hat.rs
